End of section 1

--- a/parts/section1.tex
+++ b/parts/section1.tex
@@ -1,6 +1,6 @@
 \section{Position du problème}
 
-\begin{enumerate}[\fbox{\textbf{{Q}1}}]
+\begin{enumerate}[label=\fbox{\textbf{Q\arabic*}}, series=questions]
 \item L'intensité d'un point matériel est supposée constante le long de son déplacement. On en déduit:
 \begin{align*}
   \dfrac{\D \tilde{I}}{\D t} &= \dfrac{\D x}{\D t} \partial_x I + \dfrac{\D y}{\D t} \partial_y I + \partial_t I \\
@@ -14,5 +14,5 @@ On en déduit l'équation:
 \end{equation}
 L'inconnue de cette équation est le vecteur $h = (u,v)$, correspondant à la vitesse d'un point matériel suivi, de coordonnées initiales $(x_0, y_0)$. 
 
-On ne peut pas résoudre cette équation sans hypothèse supplémentaire sur $h$. En effet, fondamentalement, l'information sur $h$ nous provient de la connaissance de $I$, or cette grandeur est de dimension 1 alors que $h$ a deux composantes indépendantes. Plus précisément, 
+On ne peut pas résoudre cette équation sans hypothèse supplémentaire sur $h$. En effet, fondamentalement, l'information sur $h$ nous provient de la connaissance de l'intensité $I$, or cette grandeur est \og{}de \emph{dimension 1}\fg{} alors que $h$ a \emph{deux} composantes indépendantes.
 \end{enumerate}
