--- a/projet-scilab-map411.tex
+++ b/projet-scilab-map411.tex
@@ -18,6 +18,7 @@
 % Mathématiques
 \usepackage{mathtools}
 \usepackage{mathrsfs}
+\usepackage{mathdots}
 
 % Références croisées
 \usepackage[french]{varioref}
