--- a/parts/section2.tex
+++ b/parts/section2.tex
@@ -79,5 +79,41 @@ Le code de la fonction se trouve dans le fichier \verb|functions.sci|, et la fon
 	\]
 De cette manière, les pixels voisins ayant un \emph{côté} en commun sont pondérés deux fois plus que ceux qui n'ont qu'un \emph{coin} en commun avec le pixel $(i,j)$.
 
-\item CALCUL DU LAPLACIEN À JUSTIFIER !!!!.....
+\item Afin de résoudre numériquement les équations \vref{eq:uDomin} et \vref{eq:vDomin}, on approche le laplacien par une fonction plus simple.
+
+En effet, la formule de \textsc{Taylor-Young} nous donne:
+\[ u(x+h, y+k) = u(x,y) + h \partial_xu + k \partial_yu + \dfrac{h^2}{2}\partial^2_{xx}u + hk \partial^2_{xy}u + \dfrac{k^2}{2}\partial^2_{yy}u + O(\partial^3u) \]
+
+Par définition, on a:
+\[ \bar{u}_{i,j} = \dfrac{1}{6}\left( u_{i-1,j} + u_{i+1,j} + u_{i,j+1} + u_{i,j-1} \right) + \dfrac{1}{12}\left( u_{i-1,j-1} + u_{i-1,j+1} + u_{i+1,j-1} + u_{i+1,j+1} \right) \]
+On écrit dorénavant $u$ au point $(i,j)$:
+\begin{multline*}
+\bar{u} = \dfrac{1}{6} \left( u - \partial_xu + \frac{1}{2}\partial^2_{xx}u + u + \partial_xu + \frac{1}{2}\partial^2_{xx}u + u + \partial_yu + \frac{1}{2}\partial^2_{yy}u + u - \partial_yu + \frac{1}{2}\partial^2_{yy}u \right) \\
++ \dfrac{1}{12} \left( u - \partial_xu - \partial_yu + \frac{1}{2}\partial^2_{xx}u + \partial^2_{xy}u + \frac{1}{2}\partial^2_{yy}u + u - \partial_xu + \partial_yu + \frac{1}{2}\partial^2_{xx}u - \partial^2_{xy}u + \frac{1}{2}\partial^2_{yy}u \right. \\
+\left. + u + \partial_xu - \partial_yu + \frac{1}{2}\partial^2_{xx}u - \partial^2_{xy}u + \frac{1}{2}\partial^2_{yy}u + u + \partial_xu + \partial_yu + \frac{1}{2}\partial^2_{xx}u + \partial^2_{xy}u + \frac{1}{2}\partial^2_{yy}u \right)
+\end{multline*}
+d'où, après simplification:
+\[ \bar{u} = u + \dfrac{1}{3}\Delta u \iff \Delta u = 3(\bar{u} - u) \]
+
+On peut alors réécrire les équations \vrefrange{eq:uDomin}{eq:vDomin}:
+\[ 
+\begin{cases*}
+I_x^2u + I_xI_yv = \alpha^2(\bar{u} - u) - I_xI_t \\
+I_xI_yu + I_y^2v = \alpha^2(\bar{v} - v) - I_yI_t
+\end{cases*}
+\iff 
+\begin{cases*}
+(I_x2 + \alpha^2)u + I_xI_yv = \alpha^2\bar{u} - I_xI_t \\
+I_xI_yu + (I_y^2 + \alpha^2)v = \alpha^2\bar{v} - I_yI_t
+\end{cases*}
+\]
+
+\item On implémente l'algorithme dans le fichier \verb|functions.sci|, avec la fonction \verb|flow(I1, I2, niter, epsilon, alpha)| qui prend en entrée les matrices des images et affiche le flot calculé dans un graphique. On l'a testée avec les images ci-dessous.
+\begin{figure*}[!h]
+\centering
+\includegraphics[width=.45\textwidth]{img/q7-img-1}
+\hfill
+\includegraphics[width=.45\textwidth]{img/q7-img-2}
+\end{figure*}
+On voit que les zones présentant de fortes discontinuités de luminosité sont bien traitées : le flot est bien défini en direction, et il est distribué de façon homogène. En revanche, dans les zones uniformes, le flot est erratique et ne permet de conclure quant au mouvement des points matériels représentés.
 \end{enumerate}
