--- a/projet-scilab-map411.tex
+++ b/projet-scilab-map411.tex
@@ -83,8 +83,18 @@
 
 \maketitle
 
+Le code Scilab se trouve dans deux fichiers: \verb|functions.sci| et \verb|projet.sce|:
+\begin{itemize}
+\item \verb|functions.sci| regroupe l'ensemble des fonctions qu'il fallait implémenter dans chaque question du problème. Une fois ce fichier chargé dans Scilab, il est donc possible de tester ces fonctions indépendamment;
+\item \verb|projet.sce| fait appel au fichier précédent et utilise les fonctions pour répondre aux questions 7 et 14. Lorsqu'il est exécuté, le résultat de la question 7 est affiché pendant \SI{4}{\second}, suivi de celui de la question 14.
+\end{itemize}
+
 \input{parts/section1}
+\pagebreak
+
 \input{parts/section2}
+\pagebreak
+
 \input{parts/section3}
 
 
